tests/scripts/type_errors/overriding_builtin.roto
record u32 { b: u32 }

fn foo() {}
